# Multi-Robot-Task-Allocation

./: .gitignore  README.md  frames_2025-12-04_19.12.38.gv  frames_2025-12-07_01.53.02.gv  requirements.txt
src/: readme.txt
src/bringup/: CMakeLists.txt  package.xml
src/bringup/launch/: bringup.launch.py
src/custom_interfaces/: CMakeLists.txt  package.xml
src/custom_interfaces/srv/: PlanPath.srv
src/dta_bringup/: CMakeLists.txt  package.xml
src/dta_bringup/launch/: bringup.launch.py
src/localization/: CMakeLists.txt  package.xml
src/localization/config/: amcl.yaml
src/localization/launch/: global_localization.launch.py  just_map.launch.py  multi_amcl.launch.py
src/localization/maps/: map.pgm  map.yaml
src/maps/: map.pgm  map.yaml
src/motion_planner/: package.xml  setup.py
src/motion_planner/launch/: pd_motion_planner_multi.launch.py
src/motion_planner/motion_planner/: __init__.py  pd_motion_planner.py
src/path_planning/: package.xml  setup.py
src/path_planning/config/: inflation_costmap.yaml
src/path_planning/path_planning/: __init__.py  a_star_planner.py  hungarian.py  inflation_costmap_node.py  path_allocation.py
src/warehouse_world/: CMakeLists.txt  package.xml
src/warehouse_world/launch/: bringup_gazebo.launch.py  spawn_five_tb3.launch.py  spawn_tb3.launch.py
src/warehouse_world/models/tb3_1_burger/: model.sdf
src/warehouse_world/models/tb3_2_burger/: model.sdf
src/warehouse_world/models/tb3_3_burger/: model.sdf
src/warehouse_world/models/tb3_4_burger/: model.sdf
src/warehouse_world/models/tb3_5_burger/: model.sdf
src/warehouse_world/models/warehouse/: model.config  model.sdf
src/warehouse_world/worlds/: warehouse.world
