<?xml version="1.0"?>
<package format="3">
  <name>bringup</name>
  <version>0.0.0</version>
  <description>Bringup launch for multi-robot warehouse system</description>

  <maintainer email="muditmnr@gmail.com">mudit</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Launch & Python helpers -->
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>ament_index_python</exec_depend>

  <!-- Packages we use inside the launch file -->
  <exec_depend>warehouse_world</exec_depend>
  <exec_depend>localization</exec_depend>
  <exec_depend>path_planning</exec_depend>
  <exec_depend>motion_planner</exec_depend>
  <exec_depend>rviz2</exec_depend>

</package>
