<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>dta_bringup</name>
    <version>0.0.0</version>
    <description>TODO: Package description</description>
    <maintainer email="muditmnr@gmail.com">mudit</maintainer>
    <license>TODO: License declaration</license>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <test_depend>ament_lint_auto</test_depend>
    <test_depend>ament_lint_common</test_depend>

    <exec_depend>launch</exec_depend>
    <exec_depend>launch_ros</exec_depend>
    <exec_depend>ament_index_python</exec_depend>

    <!-- Optional, but good practice if they’re in your workspace or installed -->
    <exec_depend>warehouse_world</exec_depend>
    <exec_depend>localization</exec_depend>
    <exec_depend>path_planning</exec_depend>
    <exec_depend>motion_planner</exec_depend>
    <exec_depend>rviz2</exec_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
