<?xml version="1.0"?>
<package format="3">
  <name>path_planning</name>
  <version>0.0.0</version>
  <description>Multi-robot path planning and task allocation</description>

  <maintainer email="muditmnr@gmail.com">mudit</maintainer>
  <license>Apache-2.0</license>

  <!-- Python package build type -->
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- Runtime deps -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>

  <!-- custom_interfaces is where PlanPath.srv lives -->
  <exec_depend>custom_interfaces</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
