<?xml version="1.0"?>
<package format="3">
  <name>warehouse_world</name>
  <version>0.0.1</version>
  <description>Gazebo Classic world with a warehouse STL model.</description>
  <maintainer email="you@example.com">You</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>gazebo_ros</exec_depend>

  <!-- So launch/worlds/models get indexed via ament -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
